--- a/src/components/Painting.module.scss
+++ b/src/components/Painting.module.scss
@@ -1,11 +1,26 @@
 .paintings {
-  display: flex;
-  flex-wrap: wrap;
+  position: relative;
+  width: 950px;
 }
 
 .paintingImage {
+  min-width: 360px;
+  min-height: 275px;
+  background-color: lightblue;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.name {
+}
+
+.nameBlog {
+  /*  position: absolute;
+  top: -140px;
+  left: 0;
+
+  padding: 5px 0 0 15px;
+  background-color: rgba(255, 255, 255, 0.75);
   width: 360px;
-  height: 275px;
-  background-color: red;
-  margin: 30px;
+  height: 145px;
+  transition: 0.7s;*/
 }
