--- a/src/components/Painting.module.scss
+++ b/src/components/Painting.module.scss
@@ -1,6 +1,5 @@
-.paintings {
+.painting {
   position: relative;
-  width: 950px;
 }
 
 .paintingImage {
@@ -10,17 +9,25 @@
   margin-right: 20px;
   margin-bottom: 20px;
 }
+
 .name {
-}
-
-.nameBlog {
-  /*  position: absolute;
-  top: -140px;
+  position: absolute;
+  top: 240px;
   left: 0;
-
   padding: 5px 0 0 15px;
   background-color: rgba(255, 255, 255, 0.75);
   width: 360px;
+  height: 30px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: capitalize;
+  transition: 0.4s;
+}
+
+.nameBlog {
+  @extend .name;
+  top: 140px;
   height: 145px;
-  transition: 0.7s;*/
 }
