--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,93 +26,6 @@
   padding-left: 15px;
 }
 
-.paginator {
-  button {
-    width: 39px;
-    height: 38px;
-    user-select: none;
-    cursor: pointer;
-    border: 1px solid black;
-    border-right: none;
-    color: black;
-    background: inherit;
-    font-weight: 500;
-
-    &:first-of-type {
-      border-radius: 8px 0 0 8px;
-      cursor: pointer;
-    }
-
-    &:last-child {
-      border-radius: 0 8px 8px 0;
-      border-right: 1px solid;
-      cursor: pointer;
-    }
-
-    &:only-child {
-      border-radius: 8px;
-    }
-
-    &:hover {
-      background: #ededed;
-      color: black;
-      border-color: black;
-    }
-
-    &:disabled {
-      border-color: #b3b3b3;
-      color: #b3b3b3;
-
-      &:hover {
-        cursor: auto;
-        background: inherit;
-      }
-    }
-
-    &--dark {
-      border: 1px solid white;
-      color: white;
-      border-right: none;
-
-      &:hover {
-        background: #464646;
-        color: white;
-        border-color: white;
-      }
-
-      &:disabled {
-        border-color: #4c4c4c;
-        color: #4c4c4c;
-      }
-    }
-
-    &.PaginationPageWithActive {
-      background: black;
-      color: white;
-      border-color: black;
-
-      &:hover {
-        cursor: auto;
-        background: black;
-        color: white;
-        border-color: black;
-      }
-
-      &--dark {
-        background: white;
-        color: black;
-        border-color: white;
-
-        &:hover {
-          background: white;
-          color: black;
-          border-color: white;
-        }
-      }
-    }
-  }
-}
-
 /*.select {
   position: relative;
   display: flex;
@@ -165,8 +78,8 @@
   overflow: hidden;
   background-color: white;
   box-shadow:
-    0px 10px 38px -10px rgba(22, 23, 24, 0.35),
-    0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+    0 10px 38px -10px rgba(22, 23, 24, 0.35),
+    0 10px 20px -15px rgba(22, 23, 24, 0.2);
 }
 
 .SelectViewport {
