--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,141 +1,52 @@
 .App {
-  box-sizing: border-box;
-  display: block;
   overflow: hidden;
-  padding-bottom: 100px;
-}
-
-.container {
+  max-width: 1345px;
+  margin: 0 auto;
+  padding: 35px 0 97px 0;
 }
 
 .input {
-  width: 265px;
-  height: 45px;
+  width: 248px;
+  height: 43px;
+  padding-left: 15px;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   background: #fff;
   color: rgba(0, 0, 0, 0.3);
-  font-feature-settings:
-    "clig" off,
-    "liga" off;
   font-family: Roboto;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
-  padding-left: 15px;
+  position: relative;
+  @media screen and (max-width: 1157px) {
+    width: 215px;
+    height: 45px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 155px;
+    height: 45px;
+  }
+  @media screen and (max-width: 320px) {
+    width: 280px;
+    height: 45px;
+  }
 }
 
-/*.select {
-  position: relative;
+.pag {
+  padding-right: 850px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  width: 265px;
-  height: 46px;
-  border-radius: 8px;
-  box-shadow: 0px 0px 0px 1px black;
-  color: black;
-  box-sizing: border-box;
-  background: white;
-  cursor: pointer;
-}*/
-.SelectTrigger {
-  border-radius: 8px 8px 0 0;
-  display: inline-flex;
   align-items: center;
-  justify-content: center;
-  padding: 0 15px;
-  font-size: 13px;
-  line-height: 1;
-  height: 35px;
-  gap: 7px;
-  background-color: white;
-  color: var(--violet-11);
-  box-shadow: 0 2px 10px var(--black-a7);
-  position: relative;
-}
-.SelectTrigger:hover {
-  background-color: var(--mauve-3);
-}
-.SelectTrigger:focus {
-  box-shadow: 0 0 0 2px black;
-}
-.SelectTrigger[data-placeholder] {
-  color: var(--violet-9);
-}
-
-.SelectIcon {
-  color: Var(--violet-11);
-}
-
-.SelectContent {
-  border-radius: 0 0 8px 8px;
-  position: absolute;
-  left: 17px;
-  top: 60px;
-  overflow: hidden;
-  background-color: white;
-  box-shadow:
-    0 10px 38px -10px rgba(22, 23, 24, 0.35),
-    0 10px 20px -15px rgba(22, 23, 24, 0.2);
-}
-
-.SelectViewport {
-  padding: 7px;
-}
-
-.SelectItem {
-  font-size: 13px;
-  line-height: 1;
-  color: var(--violet-11);
-  border-radius: 3px;
-  display: flex;
-  align-items: center;
-  height: 25px;
-  padding: 0 35px 0 25px;
-  position: relative;
-  user-select: none;
-}
-.SelectItem[data-disabled] {
-  color: var(--mauve-8);
-  pointer-events: none;
-}
-.SelectItem[data-highlighted] {
-  outline: none;
-  background-color: var(--violet-9);
-  color: var(--violet-1);
-}
-
-.SelectLabel {
-  padding: 0 25px;
-  font-size: 12px;
-  line-height: 25px;
-  color: var(--mauve-11);
-}
-
-.SelectSeparator {
-  height: 1px;
-  background-color: var(--violet-6);
-  margin: 5px;
-}
-
-.SelectItemIndicator {
-  position: absolute;
-  left: 0;
-  width: 25px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.SelectScrollButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 25px;
-  background-color: white;
-  color: var(--violet-11);
-  cursor: default;
+  margin: 10px;
+  @media screen and (max-width: 1157px) {
+    padding-right: 660px;
+  }
+  @media screen and (max-width: 1024px) {
+  }
+  @media screen and (max-width: 768px) {
+    padding-right: 420px;
+  }
+  @media screen and (max-width: 320px) {
+    padding-right: 0;
+  }
 }
