--- a/src/components/Paintings/Painting.module.scss
+++ b/src/components/Paintings/Painting.module.scss
@@ -3,16 +3,33 @@
 }
 
 .paintingImage {
-  min-width: 360px;
-  min-height: 275px;
+  width: 360px;
+  height: 275px;
   background-color: lightblue;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  @media screen and (max-width: 1157px) {
+    width: 300px;
+    height: 230px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 340px;
+    height: 249px;
+  }
+  @media screen and (max-width: 736px) {
+    width: 300px;
+    height: 230px;
+  }
+  @media screen and (max-width: 320px) {
+    width: 280px;
+    height: 205px;
+  }
 }
 
 .name {
   position: absolute;
-  top: 240px;
+  top: 250px;
   left: 0;
   padding: 5px 0 0 15px;
   background-color: rgba(255, 255, 255, 0.75);
