--- a/src/components/Paintings/Painting.module.scss
+++ b/src/components/Paintings/Painting.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
+  cursor: pointer;
   @media screen and (max-width: 1157px) {
     width: 300px;
     height: 230px;
@@ -47,4 +48,5 @@
   @extend .name;
   top: 140px;
   height: 145px;
+  cursor: pointer;
 }
