--- a/src/components/Paintings/Painting.module.scss
+++ b/src/components/Paintings/Painting.module.scss
@@ -8,7 +8,7 @@
 .paintingImage {
   width: 360px;
   height: 275px;
-  background-color: lightblue;
+  background-color: #ededed;
   cursor: pointer;
   border-radius: 22px 22px 22px 22px;
   @media screen and (max-width: 1157px) {
