--- a/src/index.scss
+++ b/src/index.scss
@@ -117,7 +117,7 @@ html[data-theme="dark"] {
   }
 }
 
-.Select {
+/*.Select {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -444,4 +444,4 @@ html[data-theme="dark"] {
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
-}
+}*/
