--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -13,12 +13,20 @@ button {
   justify-content: space-between;
   position: relative;
   cursor: pointer;
-}
 
-.Trigger[data-state="open"] {
-  border-radius: 8px 8px 0 0;
-  border: 1px solid #000;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  &[data-state="open"] {
+    border-radius: 8px 8px 0 0;
+    border: 1px solid #000;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .SelectValue {
+    margin-left: 15px;
+    padding-right: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .Content {
@@ -45,36 +53,31 @@ button {
 .ScrollAreaRoot {
   width: 100%;
   height: 100%;
+
+  .ScrollAreaViewport {
+    width: 100%;
+    height: 100%;
+  }
+  .ScrollAreaScrollbar {
+    width: 10px;
+    padding: 1px 6px;
+
+    .ScrollAreaThumb {
+      background: #7b7b7b;
+      border-radius: 10px;
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+    }
+  }
 }
 
-.ScrollAreaViewport {
-  width: 100%;
-  height: 100%;
-}
-
-.ScrollAreaScrollbar {
-  width: 10px;
-  padding: 1px 6px;
-}
-
-.ScrollAreaThumb {
-  background: #7b7b7b;
-  border-radius: 10px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
-}
-
-.label {
-  margin-left: 15px;
-}
-
-.SelectValue {
-  margin-left: 15px;
-}
-
-.Del {
+.IconDel {
   margin: 0 20px;
   position: absolute;
   right: 15px;
   top: 9px;
   z-index: 10000;
+}
+
+.IconArrow {
+  margin-right: 15px;
 }
