--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,12 +26,16 @@ input {
   &:focus {
     border: 1px solid #000;
   }
-  @media screen and (max-width: 1157px) {
+  /*  @media screen and (max-width: 1157px) {
     width: 215px;
+    height: 45px;
+  }*/
+  @media screen and (max-width: 1024px) {
+    width: 220px;
     height: 45px;
   }
   @media screen and (max-width: 768px) {
-    width: 155px;
+    width: 160px;
     height: 45px;
   }
   @media screen and (max-width: 320px) {
@@ -41,10 +45,46 @@ input {
 }
 
 .pag {
-  width: 100%;
+  padding-left: 15px;
 }
 
 .arrowSvg {
   fill: var(--icon-color);
   cursor: pointer;
+  padding-left: 20px;
+}
+
+.loader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-top: 4px solid #fff;
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-left: 4px solid #ff3d00;
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
