--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -19,6 +19,18 @@ h3 {
   width: 265px;
   height: 45px;
   cursor: pointer;
+  @media screen and (max-width: 1024px) {
+    width: 220px;
+    height: 45px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 160px;
+    height: 45px;
+  }
+  @media screen and (max-width: 320px) {
+    width: 280px;
+    height: 45px;
+  }
 
   .label {
     margin-left: 15px;
@@ -26,7 +38,7 @@ h3 {
 
   .AccordionChevron {
     transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
-    margin-right: 18px;
+    margin-right: 15px;
   }
 
   &[data-state="open"] {
@@ -78,4 +90,10 @@ h3 {
       }
     }
   }
+}
+.dash {
+  margin-top: 42px;
+  background-color: black;
+  width: 12px;
+  height: 1px;
 }
