--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -2,6 +2,15 @@ button {
   all: unset;
 }
 
+.IconDel {
+  margin: 0 20px;
+  position: absolute;
+  right: 17px;
+  top: 10px;
+  cursor: pointer;
+  z-index: 100;
+}
+
 .Trigger {
   width: 265px;
   height: 45px;
@@ -13,11 +22,32 @@ button {
   justify-content: space-between;
   position: relative;
   cursor: pointer;
+  @media screen and (max-width: 1024px) {
+    width: 220px;
+    height: 45px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 160px;
+    height: 45px;
+  }
+  @media screen and (max-width: 320px) {
+    width: 280px;
+    height: 45px;
+  }
+
+  .IconArrow {
+    transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
+    margin-right: 15px;
+  }
 
   &[data-state="open"] {
     border-radius: 8px 8px 0 0;
     border: 1px solid #000;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  &[data-state="open"] > .IconArrow {
+    transform: rotate(180deg);
   }
 
   .SelectValue {
@@ -39,45 +69,34 @@ button {
   height: 301px;
   border-radius: 0 0 8px 8px;
   cursor: pointer;
-}
 
-.Item {
-  padding: 12px 10px 12px 10px;
-}
-
-.Item:hover {
-  background: #000;
-  color: #fff;
-}
-
-.ScrollAreaRoot {
-  width: 100%;
-  height: 100%;
-
-  .ScrollAreaViewport {
+  .ScrollAreaRoot {
     width: 100%;
     height: 100%;
-  }
-  .ScrollAreaScrollbar {
-    width: 10px;
-    padding: 1px 6px;
 
-    .ScrollAreaThumb {
-      background: #7b7b7b;
-      border-radius: 10px;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+    .ScrollAreaViewport {
+      width: 100%;
+      height: 100%;
+    }
+
+    .ScrollAreaScrollbar {
+      width: 10px;
+      padding: 1px 6px;
+
+      .ScrollAreaThumb {
+        background: #7b7b7b;
+        border-radius: 10px;
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+      }
     }
   }
-}
 
-.IconDel {
-  margin: 0 20px;
-  position: absolute;
-  right: 15px;
-  top: 9px;
-  z-index: 10000;
-}
+  .Item {
+    padding: 12px 10px 12px 10px;
 
-.IconArrow {
-  margin-right: 15px;
+    &:hover {
+      background: #000;
+      color: #fff;
+    }
+  }
 }
