--- a/src/index.scss
+++ b/src/index.scss
@@ -19,12 +19,19 @@ code {
 
 html[data-theme="dark"] {
   --button-text-color: #ffffff;
-  --button-background-color: #4e005c;
-  --button-border-color: #ba8fc2;
+  --border: 1px solid #ffffff;
   --background-color: #000;
   --icon-color: #ffffff;
+  --text: #ffffff;
+  --line: rgba(255, 255, 255, 0.3);
 }
 
+html[data-theme="light"] {
+  --background-color: #ffffff;
+  --border: 1px solid rgba(0, 0, 0, 0.3);
+  --text: #000;
+  --line: rgba(0, 0, 0, 0.3);
+}
 .Pagination {
   display: flex;
   width: fit-content;
